<resources>
    <string name="app_name">Aisen</string>
    <string name="draw_open">打开</string>
    <string name="draw_close">关闭</string>
    <string name="menu_add_account">添加账号</string>
    <string name="menu_delete">删除</string>
    <string name="group_all_visiable">所有人可见</string>
    <string name="group_selected_visiable">分组可见</string>
    <string name="publish_timing">定时发布</string>
    <string name="cancel_timing">取消定时</string>
    <string name="profile_friendship_create">关注</string>
    <string name="profile_friendship_destory">取消关注</string>
    <string name="profile_follower_destory">移除粉丝</string>
    <string name="refresh">刷新</string>
    <string name="save_pic">保存</string>
    <string name="share">分享</string>
    <string name="copy_url">复制链接</string>
    <string name="orig_pic">原图</string>
    <string name="download_again">重新下载</string>
    <string name="main_feedback">意见反馈</string>
    <string name="timeline_groups">好友分组</string>
    <string name="main_search">搜索</string>
    <string name="search_user">搜人</string>
    <string name="search_status">搜微博</string>
    <string name="exitapp">退出</string>
    <string name="group_add">新增分组</string>
    <string name="publish">写微博</string>
    <string name="toggle_offline">开始离线</string>
    <string name="stop_offline">停止离线</string>
    <string name="timeline_cmt">评论</string>
    <string name="timeline_repost">转发</string>
    <string name="timeline_fav">收藏</string>
    <string name="timeline_fav_destory">取消收藏</string>
    <string name="timeline_shielding">屏蔽</string>
    <string name="timeline_weiguan">围观</string>
    <string name="timeline_copy">复制</string>
    <string name="timeline_all">全部微博</string>
    <string name="timeline_bilateral">互相关注</string>
    <string name="timeline_tome">朋友圈</string>
    <string name="myfav_title">我的收藏</string>
    <string name="title_acount">账号管理</string>
    <string name="account_expired">Aisen授权过期，需要重新授权才能正常使用</string>
    <string name="account_ad_expired">高级授权过期或未授权，需要重新授权才能正常使用</string>
    <string name="account_newaccount_remind">请注意，根据新浪微博的平台政策，刚添加的帐号会在 %s 天后过期，到时需要重新登录</string>
    <string name="account_relogin_remind">授权过期或者未高级授权</string>
    <string name="account_destory_account_remind">确定删除选中的账号吗？</string>
    <string name="account_delete_account_loading">正在删除账号</string>
    <string name="account_account_exit_remind">没有账号登录，将退出程序</string>
    <string name="account_account_select_remind">请选中要删除的账号</string>
    <string name="account_account_deleted">删除%d个账号</string>
    <string name="account_newaccount_notmatch">当前普通授权用户是[%s]，您高级授权的用户不匹配，请重新授权，谢谢！</string>
    <string name="account_login_remind">Aisen是开源项目，不会保留您个人任何的敏感数据，严格上来说，当您卸载Aisen后所有缓存数据将被系统删除。请确保从正常渠道获取安装包。</string>
    <string name="account_again">重新授权</string>
    <string name="account_getsettings_faild">初始化失败，是否重新获取</string>
    <string name="account_dm_closed">抱歉！私信功能暂时关闭了。感谢支持！</string>
    <string name="account_skip">跳过</string>
    <string name="account_login">开始授权</string>
    <string name="account_invalid_input_account">请输入用户名</string>
    <string name="account_invalid_input_password">请输入密码</string>
    <string name="account_get_html_faild">网络异常，请稍后重试</string>
    <string name="acount_timeout">检测到网页版未登录或已失效，是否重新授权？</string>
    <string name="account_empty">没有授权账号</string>
    <string name="account_add">添加账号</string>
    <string name="title_login">用户授权</string>
    <string name="account_auth_success">授权成功</string>
    <string name="account_load_userinfo">正在加载用户信息</string>
    <string name="account_load_groups">正在加载分组信息</string>
    <string name="account_load_auth">正在完成授权，请稍等</string>
    <string name="account_illegal_app">安全方面考虑，开发人员重置了应用秘钥，当前应用被视为盗版，请重新从应用市场下载!</string>
    <string name="account_remind">由王梦思进行二次开发</string>
    <string name="account_weico_remind">个人微博只有5条、粉丝不全、相册无配图，在这里点一下授权就好。\n\n友情提示，如果遇到验证码，请先刷新再输入验证码通过概率高一点，目前还没有优化这个问题！\n\n如有疑问，请联系我 : wangd.info@gmail.com</string>
    <string name="account_pwd_hint">密码</string>
    <string name="account_username_hint">邮箱/手机号</string>
    <string name="account_fillaccount_loading">处理中</string>
    <string name="account_fillaccount_faild">填充失败，烦请手动输入账号密码</string>
    <string name="webclient_login">填充账号</string>
    <string name="weico_success">高级授权成功</string>
    <string name="copy">复制</string>
    <string name="repost">转发</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="bu">否</string>
    <string name="remind">提示</string>
    <string name="update">更新</string>
    <string name="add">添加</string>
    <string name="i_know">我知道了</string>
    <string name="donnot_remind">不再提示</string>
    <string name="next_time_remind">下次再说</string>
    <string name="none_opts_selected">没有选中项</string>
    <string name="opts_select_remind">选中%d项</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faild">删除失败</string>
    <string name="update_success">更新成功</string>
    <string name="update_faild">更新失败</string>
    <string name="processing">正在处理</string>
    <string name="to_browser">浏览器打开</string>
    <string name="please_wait">请稍等</string>
    <string name="notifer_from_aisen">来自Aisen</string>
    <string name="notifer_new_followers">%d 个新粉丝</string>
    <string name="notifer_new_cmts">%d 个新评论</string>
    <string name="notifer_new_mention_status">%d 个提及你的微博</string>
    <string name="notifer_new_mention_cmt">%d 个提及你的评论</string>
    <string name="notifer_new_dm">%d 条新私信</string>
    <string name="notifer_timging_draft">定时发布，已存入草稿</string>
    <string name="notifer_cancel_publish">撤销发布</string>
    <string name="notifer_send_delay">%s秒后发送微博</string>
    <string name="notifer_status_sending">正在发送微博</string>
    <string name="notifer_send_success">微博发送成功</string>
    <string name="notifer_send_faild">微博发送失败，已存入草稿</string>
    <string name="notifer_send_cancel_save_draft">取消微博发送，已存入草稿</string>
    <string name="notifer_send_cmt_delay">%s秒后发送评论</string>
    <string name="notifer_cmt_sending">正在发送评论</string>
    <string name="notifer_cmt_success">评论发送成功</string>
    <string name="notifer_cmt_draft">评论发送失败，已存入草稿</string>
    <string name="notifer_cmt_cancel">取消评论，已存入草稿</string>
    <string name="notifer_reply_cmt_delay">%s秒后回复评论</string>
    <string name="notifer_reply_cmt_sending">正在回复评论</string>
    <string name="notifer_reply_cmt_success">回复评论成功</string>
    <string name="notifer_reply_cmt_faild">回复评论失败，已存入草稿</string>
    <string name="notifer_reply_cmt_cancel">取消回复评论，已存入草稿</string>
    <string name="notifer_repost_delay">%s秒后转发微博</string>
    <string name="notifer_repost_sending">正在转发微博</string>
    <string name="notifer_repost_success">转发微博成功</string>
    <string name="notifer_repost_faild">转发微博失败，已存入草稿</string>
    <string name="notifer_repost_cancel">取消转发微博，已存入草稿</string>
    <string name="draw_search">Search</string>
    <string name="draw_profile">用户资料</string>
    <string name="draw_timeline">首页</string>
    <string name="draw_message">提及</string>
    <string name="draw_comment">评论</string>
    <string name="draw_fav">收藏</string>
    <string name="draw_fav_title">收藏的微博</string>
    <string name="draw_search_v2">搜索</string>
    <string name="draw_search_title">搜索</string>
    <string name="draw_friendship">朋友圈</string>
    <string name="draw_draft">草稿箱</string>
    <string name="draw_settings">设置</string>
    <string name="mention_title">提及我的</string>
    <string name="draw_accounts">账号管理</string>
    <string name="draw_topic">热门话题</string>
    <string name="draw_topic_title">热门话题</string>
    <string name="draw_private_msg">私信</string>
    <string name="draw_private_msg_title">私信</string>
    <string name="draw_hot_statuses_title">热门微博</string>
    <string name="draw_hot_statuses">热门微博</string>
    <string name="draw_weibo_square">微博广场</string>
    <string name="draw_weibo_square_title">微博广场</string>
    <string name="draw_weibo_top">微博头条</string>
    <string name="draw_weibo_top_title">微博头条</string>
    <string name="draw_weibo_offline_read">离线阅读</string>
    <string name="draw_my_liked">我赞过的</string>
    <string name="disable_status">没有更多微博了</string>
    <string name="disable_comments">没有更多评论了</string>
    <string name="loading_status">%d条微博载入中</string>
    <string name="loading_cmts">%d条评论载入中</string>
    <string name="empty_status">没有微博</string>
    <string name="empty_cmts">没有评论</string>
    <string name="empty_account">没有授权账号</string>
    <string name="empty_search_users">没有搜索到相关用户信息</string>
    <string name="empty_search_topics">没有搜索到相关微博信息</string>
    <string name="empty_mention_suggestion">没有搜索到相关好友信息</string>
    <string name="msg_now">刚刚</string>
    <string name="msg_today">今天</string>
    <string name="msg_yesterday">昨天</string>
    <string name="msg_few_minutes_ago">分钟前</string>
    <string name="msg_male">男</string>
    <string name="msg_female">女</string>
    <string name="msg_gender_unknow">未知</string>
    <string name="msg_ten_thousand">万</string>
    <string name="msg_url_copyed">链接已复制</string>
    <string name="msg_text_copyed">内容已复制</string>
    <string name="msg_image_copyed">图片链接已复制</string>
    <string name="msg_del_cmt_remind">确定删除评论吗？</string>
    <string name="msg_del_status_remind">确定删除微博吗？</string>
    <string name="msg_shield_remind">是否屏蔽当前微博，以及后续对其转发而引起的@提到你的微博？</string>
    <string name="msg_shield_success">屏蔽成功</string>
    <string name="msg_shield_faild">屏蔽失败</string>
    <string name="publish_please_login">请登录后再分享</string>
    <string name="publish_share_def">分享心得</string>
    <string name="publish_status_none">该微博已删除</string>
    <string name="publish_cmt_to_user">同时评论给作者</string>
    <string name="title_about">关于</string>
    <string name="settings_about_feedback">意见反馈</string>
    <string name="settings_about_feedback_summary">告诉我您的想法和建议</string>
    <string name="settings_about">关于</string>
    <string name="settings_opensource">开源协议</string>
    <string name="category_developer">开发者选项</string>
    <string name="settings_about_debug">Debug模式</string>
    <string name="settings_about_debug_summary">设置Debug模式后，所有相关设置选项都为测试缺省设置</string>
    <string name="settings_about_screen_rotate">屏幕旋转</string>
    <string name="settings_cache_disable">禁用缓存</string>
    <string name="settings_network_delay">网络请求延迟10s</string>
    <string name="settings_cache_disable_summary">禁用微博、评论缓存</string>
    <string name="settings_dt_cache_validdate">设置缓存有效时间</string>
    <string name="settings_cache_validdate">缓存数据有效时间</string>
    <string name="settings_crash_log">Crash日志上传</string>
    <string name="settings_crash_log_summary">Wifi时自动上传程序崩溃日志，建议开启，帮助我们定位BUG优化程序</string>
    <string name="settings_version_update">检查更新</string>
    <string name="settings_grade">给我好评</string>
    <string name="title_notification_enable">开启通知提醒</string>
    <string name="category_general">常规设置</string>
    <string name="settings_dt_notify_interval">消息间隔</string>
    <string name="settings_bother">夜间免打扰</string>
    <string name="settings_bother_summary">凌晨1点-早上8点关闭通知提醒</string>
    <string name="category_notify_type">通知类型</string>
    <string name="settings_status_mention">\@我的微博</string>
    <string name="settings_cmt_mention">\@我的评论</string>
    <string name="settings_followers_notify">粉丝</string>
    <string name="settings_cmt_notify">评论</string>
    <string name="settings_dm_notify">私信</string>
    <string name="category_notify_feedback">提醒方式</string>
    <string name="settings_notify_sound">声音提醒</string>
    <string name="settings_notify_virate">振动提醒</string>
    <string name="settings_notify_led">LED提醒</string>
    <string name="settings_dt_pic_upload">图片上传质量</string>
    <string name="settings_photo">显示高清头像</string>
    <string name="settings_midpic_hint">显示高清图已下载提示</string>
    <string name="settings_pic_none">开启列表无图模式</string>
    <string name="settings_pic_mode">图片加载模式</string>
    <string name="settings_dt_status_count">微博每次加载数量</string>
    <string name="settings_dt_cmt_count">评论每次加载数量</string>
</resources>