<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <Preference android:key="pFeedback" android:title="@string/settings_about_feedback" 
	 	    android:summary="@string/settings_about_feedback_summary" /> -->

    <Preference
        android:key="pAbout"
        android:title="@string/settings_about"/>

    <!--<Preference android:key="pHelp" android:title="@string/settings_help" />-->

    <Preference
        android:key="pAppFeedback"
        android:summary="@string/settings_about_feedback_summary"
        android:title="@string/settings_about_feedback"/>

    <Preference
        android:key="pGrade"
        android:title="@string/settings_grade"/>

    <Preference
        android:key="pVersion"
        android:title="@string/settings_version_update"/>

    <PreferenceCategory android:title="@string/category_developer">
        <Preference
            android:key="pGithub"
            android:summary="github.com/wangdan/AisenWeiBo"
            android:title="Github"/>

        <Preference
            android:key="pOpensource"
            android:summary="Licensed under the Apache License, Version 3.0"
            android:title="@string/settings_opensource"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pDebug"
            android:summary="@string/settings_about_debug_summary"
            android:title="@string/settings_about_debug"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pScreenRotate"
            android:title="@string/settings_about_screen_rotate"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pNetworkDelay"
            android:title="@string/settings_network_delay"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pDisableCache"
            android:summary="@string/settings_cache_disable_summary"
            android:title="@string/settings_cache_disable"/>

        <org.aisen.weibo.sina.ui.widget.AisenListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_dt_cache_validdate"
            android:entries="@array/pCacheValidity"
            android:entryValues="@array/prefValues"
            android:key="pCacheValidity"
            android:title="@string/settings_cache_validdate"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pCrashLog"
            android:summary="@string/settings_crash_log_summary"
            android:title="@string/settings_crash_log"/>

    </PreferenceCategory>

</PreferenceScreen>
