<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pNotificationEnable"
        android:title="@string/title_notification_enable"/>

    <PreferenceCategory android:title="@string/category_general">
        <org.aisen.weibo.sina.ui.widget.AisenListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/settings_dt_notify_interval"
            android:entries="@array/txtUnread"
            android:entryValues="@array/prefValues"
            android:key="pInterval"
            android:title="@string/settings_dt_notify_interval"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pNightClose"
            android:summary="@string/settings_bother_summary"
            android:title="@string/settings_bother"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_notify_type">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pStatusMention"
            android:title="@string/settings_status_mention"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pCommentMention"
            android:title="@string/settings_cmt_mention"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pFollower"
            android:title="@string/settings_followers_notify"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pComment"
            android:title="@string/settings_cmt_notify"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pDm"
            android:title="@string/settings_dm_notify"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_notify_feedback">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pNotifySound"
            android:title="@string/settings_notify_sound"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pNotifyVibrate"
            android:title="@string/settings_notify_virate"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pNotifyLED"
            android:title="@string/settings_notify_led"/>
    </PreferenceCategory>

</PreferenceScreen>
